# DX-Snap

./: CMakeLists.txt  Makefile  README.md  build.sh  depends.sh
DX-Snap/: installer.sh
client/: .gitignore  pubspec.yaml
client/.dart_tool/: package_config.json  package_config_subset  package_graph.json
client/.dart_tool/flutter_build/6af6c2e7ff4591f9aa712b56de821540/: .filecache  dart_build.d  dart_build.stamp  debug_bundle_linux-x64_assets.stamp  flutter_assets.d  install_code_assets.d  install_code_assets.stamp  kernel_snapshot_program.d  kernel_snapshot_program.stamp  linux_engine_sources.d  outputs.json  unpack_linux.stamp
client/lib/: main.dart  tools.dart
client/lib/menu/: home_page.dart  login_page.dart
client/lib/network/: tcp_client.dart
debian/: changelog  control  postinst  rules
docs/: Api_graphique.txt  Api_variant.txt  Installer.txt  Libnetwork.txt  Multiplateforme.txt  Version_cpp.txt
include/: header.hpp
server/: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
server/.sqlx/: query-29e24875de78db2db15d3cfc803f2e9804eea8516e8eba636f0203124db1e954.json  query-cfbf61d47482ed45f6a98877036cc12c7308487fb6707d1afeaf57f3f6b95c8b.json  query-f1f37305aef1d5c639853c72eb080966a26080f385e6c445406cda2314dd62d4.json  query-f68a64218a61d2f2521918bdb18985e87dc36366e7e3276db733b06b5d18a183.json
server/migrations/: 20250825155100_tables.down.sql  20250825155100_tables.up.sql
server/src/: client.rs  command_module.rs  main.rs  prelude.rs  protocol.rs
server/src/states/: homepage.rs  login.rs
src/: main.cpp
