[package]
name = "dx_snap_server"
version = "0.1.0"
edition = "2024"

[dependencies]
#async-trait is for the protocol: dyn cant call async func natively
async-trait = "0.1.88"
chrono = "0.4.41"
#get home path
dirs = "6.0.0"
#async environment
tokio = { version = "1.46", features = ["full"] }
#serde is the serializer for json and msgpack format
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#postgres manager
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
anyhow = "1.0.99"
